# evolharvester

./: LICENSE  README.md  gradtester.outs  preview.html  pyproject.toml  setup.py
src/EvolHarvest/: absrel.py  busted.py  fel.py  gard.py
src/EvolHarvest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/evolharvester/: cli.py  draft_relax.py  fubar.py  meme.py
src/evolharvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/evolharvester/hyphy_harvesters/: absrel.py  fel.py  gard.py  meme.py
src/evolharvester/paml_harvesters/: baseml.py  codemlFreeRatio.py  codemlM0.py  codemlM1a.py  codemlM2a.py  codemlM7.py  codemlM8.py  codemlOneRatio.py  yn00.py
tests/: APOC1basemltest.out  CASEAcodemlM0Test.out  FMO1feltest.out  FXYD2codemlFreeRatio.out  FXYD2codemlM1aTest.out  FXYD2codemlM2aTest.out  FXYD2codemlM7Test.out  FXYD2codemlM8.out  FXYD2codemlOneRatio.out  FXYD2codemlOneRatioTest.out
tests/hyphy_testers/: FMO1_BUSTED.json  FMO1_FEL.json  FMO1_GARD.json  FMO1_MEME.json  FMO1part0_aBSREL.json  FMO1part1_aBSREL.json  SGMS2_BUSTED.json  SGMS2_FEL.json  SGMS2_FUBAR.json  SGMS2_GARD.json  SGMS2_MEME.json  SGMS2part0_aBSREL.json
tests/paml_testers/APOC1/: APOC1.phy
tests/paml_testers/APOC1/baseml/: 2base.t  baseml.ctl  baseml.out  lnf  rates  rst  rub  tree_with_lengths_BS.nwk  tree_with_lengths_BS_label.nwk
tests/paml_testers/APOC1/codeml/: 2NG.dN  2NG.dS  2NG.t  4fold.nuc  BranchSite_alt.ctl  BranchSite_alt.out  BranchSite_null.ctl  BranchSite_null.out  FreeRatio.ctl  FreeRatio.out  M1a.ctl  M1a.out  M2a.ctl  M2a.out  M2aTEST.csv  M7.ctl  M7.out  M8.ctl  M8.out  OneRatio.ctl  OneRatio.out  lnf  rst  rst1  rub
tests/paml_testers/APOC1/yn00/: 2YN.dN  2YN.dS  2YN.t  align_short.phy  header_mapping.txt  rst  yn00.ctl  yn00_full_headers.out
tests/paml_testers/FXYD2/: FXYD2.phy
tests/paml_testers/FXYD2/baseml/: 2base.t  baseml.ctl  baseml.out  lnf  rates  rst  rub  tree_with_lengths_BS.nwk
tests/paml_testers/FXYD2/codeml/: 2NG.dN  2NG.dS  2NG.t  4fold.nuc  BranchSite_alt.ctl  BranchSite_alt.out  BranchSite_null.ctl  BranchSite_null.out  FreeRatio.ctl  FreeRatio.out  M1a.ctl  M1a.out  M2a.ctl  M2a.out  M7.ctl  M7.out  M8.ctl  M8.out  OneRatio.ctl  OneRatio.out  lnf  rst  rst1
tests/paml_testers/FXYD2/yn00/: 2YN.dN  2YN.dS  2YN.t  align_short.phy  header_mapping.txt  rst  yn00.ctl  yn00_full_headers.out
