[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "EvolHarvest"
version = "0.1.0"
description = """Evolharvest pulls contents from structured HyPhy JSONs and restructures to CSV
for later downstream parsing (e.g. with R/python) for subsequent statistical analysis/visualization."""
readme = "README.md"
requires-python = ">=3.10.19"
authors = [{name = "Anthony T. Pulvino"}]
license = {text = "MIT"}

dependencies = [
	"numpy>=1.24",
	"pandas>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

####`evolharvest` exec on cli calling, EvolHarvest.cli:main
[project.scripts]
evolharvest = "EvolHarvest.cli:main"
