[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolharvester"
version = "0.1.0"
description = """Evolharvester pulls contents from structured HyPhy JSONs and restructures to CSV
for later downstream parsing (e.g. with R/python) for subsequent statistical analysis/visualization."""
readme = "README.md"
requires-python = ">=3.10.19"
authors = [{name = "Anthony T. Pulvino"}]
license = {text = "MIT"}

dependencies = [
	"numpy>=1.24",
	"pandas>=2.0",
	"biopython>=1.85"
	]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

####`eh` exec on cli calling, EvolHarvest.cli:main
[project.scripts]
eh = "evolharvester.cli:main"
