[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolharvester"
version = "0.1.0.dev1"
description = "Parse HyPhy and PAML codon-selection analysis outputs into tidy CSVs for downstream, user-defined analyses."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "biopython>=1.85"]
authors = [{name = "Anthony T. Pulvino", email = "anthonypulvino2025@u.northwestern.edu"}]
license = {text = "MIT"}
keywords = ["bioinformatics", "phylogenetics", "molecular evolution", "positive selection", "codon model", "HyPhy", "PAML", "comparative genomics", "dN/dS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis"
]


[project.urls]
Homepage = "https://github.com/apulvino/evolharvester"
Repository = "https://github.com/apulvino/evolharvester"
"Bug Tracker" = "https://github.com/apulvino/evolharvester/issues"
"Source Code" = "https://github.com/apulvino/evolharvester"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

####`eh` exec on cli calling, EvolHarvest.cli:main
[project.scripts]
eh = "evolharvester.cli:main"

